--- a/softcenter/Changelog.txt
+++ b/softcenter/Changelog.txt
@@ -1,5 +1,8 @@
 Koolshare LEDE-X64 Softcenter Changelog
 ===========================================
+0.3.2
+   - update	修复skipd数据库在储存某些值时崩溃，导致软件中心异常的问题（更新后建议重启路由一次）。
+
 0.3.1
    - update	更新电报群链接，固件和插件有问题的朋友欢迎加入电报群反馈，此处更容易发现大佬。
 
